.provarCaches/00D6C0000000xA6UAI/objects/sked__Availability_Template_Entry__c.object
<CustomObject>
    <fields>
        <fullName>sked__Availability_Template__c</fullName>
        <label>Availability Template</label>
        <referenceTo>sked__Availability_Template__c</referenceTo>
        <relationshipLabel>Availability Template Entries</relationshipLabel>
        <relationshipName>Availability_Template_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Finish_Time__c</fullName>
        <label>Finish Time</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Is_Available__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, marks this resource as available during the given time period. If unchecked, marks the resource as *unavailable* during the given time period.</inlineHelpText>
        <label>Is Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Start_Time__c</fullName>
        <inlineHelpText>The start time in 24 hour numeric format (i.e. 2230)</inlineHelpText>
        <label>Start Time</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Weekday__c</fullName>
        <inlineHelpText>Select the weekday this entry will apply to.</inlineHelpText>
        <label>Weekday</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MON</fullName>
                </value>
                <value>
                    <fullName>TUE</fullName>
                </value>
                <value>
                    <fullName>WED</fullName>
                </value>
                <value>
                    <fullName>THU</fullName>
                </value>
                <value>
                    <fullName>FRI</fullName>
                </value>
                <value>
                    <fullName>SAT</fullName>
                </value>
                <value>
                    <fullName>SUN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Availability Template Entry</label>
    <nameField>
        <displayFormat>AVTE-{0000}</displayFormat>
        <label>Availability Template Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availability Template Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sked__Validate_Start_Finish_Time</fullName>
        <active>true</active>
        <errorConditionFormula>sked__Start_Time__c  &gt;=  sked__Finish_Time__c</errorConditionFormula>
        <errorMessage>Finish time must be after Start time</errorMessage>
    </validationRules>
</CustomObject>